# zafira-core

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTACION_RESUMEN.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  render.yaml
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
.github/workflows/: ai-review.yml  ci.yml  code-quality.yml  copilot-review.yml  django-tests.yml  docker-build.yml  keep-alive.yml
ai/: AGENTS.md  README.md  context.md  instructions.md
ai/context/: PROJECT_BRIEF.md
ai/governance/: AGENT_POLICY.md
ai/prompts/: README.md
ai/standards/: DEVELOPMENT_STANDARD.md
ai/workflows/: UI_DARK_MODE_CHECKLIST.md
app/auth/: admin.py  apps.py  serializers.py  signals.py  urls.py
app/profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/scraper/: services.py  urls.py
app/security/: admin.py  mixins.py  urls.py
config/: db.py  settings.py  urls.py
core/: celery.py  settings.py  urls.py
core/auth/: admin.py  apps.py  signals.py  urls.py
core/common/: choices.py  constants.py  mixins.py
core/profiles/: admin.py  apps.py  serializers.py  signals.py  urls.py  views.py
core/recommend/: apps.py
core/scraper/: apps.py  base.py  parsers.py  services.py  services_live.py  urls.py
core/security/: admin.py  apps.py  context_processors.py  mixins.py  urls.py
core/tryon/: admin.py  apps.py
core/user/: admin.py  urls.py
core/utils/: enums.py
deploy/: README.md
deploy/docker/: docker-compose.yml
deploy/docker-service-zafira/: Dockerfile  docker-compose.db-redis.yml  docker-compose.yml
dev/: README.md  pre-commit-config.yaml
docs/: DESIGN_SYSTEM.md  README.md  architecture.md  design-system.md  development.md
docs/governance/: README.md  claude-guide.md  quick-start.md
docs/project/: changelog.md  root-files.md
docs/stich/: DESIGN.md
requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt
scripts/: README.md  make_help.py
scripts/pr_review/: README.md  (+1 more)
templates/: base.html  base_public.html  delete.html  form.html  list.html
var/: README.md
(+349 files in other folders)
